<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ETP</string>

    <!-- Strings related to login -->
    <string name="platform_name">Elevator Training Platform</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">立即注册</string>
    <string name="error_blank_password">账号或密码不能为空</string>

    <!-- Strings related to upgrade dialog -->
    <string name="upgrade_dialog_desc">检测到不是最新版本，是否更新？</string>
    <string name="upgrade_dialog_ok">确定</string>
    <string name="upgrade_dialog_cancel">取消</string>

    <!-- Strings related to register -->
    <string name="register_login_name">登录账号</string>
    <string name="register_real_name">姓名</string>
    <string name="register_nickname">昵称</string>
    <string name="register_login_pwd">密码</string>
    <string name="register_text">注册</string>

    <!-- Strings related to title bar text -->
    <string name="home">课程市场</string>
    <string name="owner">个人中心</string>

    <string name="ranking">排名</string>
    <string name="test">考试</string>
    <string name="study">学习</string>
    <string name="my_news">我的消息</string>
    <string name="avatar">头像</string>
    <string name="my_ranking">我的排名</string>
    <string name="tested">已考</string>
    <string name="untested">未考</string>
    <string name="introduction">简介：</string>
    <string name="issue">发布</string>
    <string name="publish_time">发布时间：</string>
    <string name="type">类型</string>
    <string name="leave_comment">写评论</string>
    <string name="select_a_photo_from_album">从相册选一张</string>
    <string name="take_a_photo">拍一张照片</string>
    <string name="remaining_time">剩余：</string>
    <string name="test_paper_submission">交卷</string>
    <string name="test_result">考试成绩：</string>
    <string name="used_time">用时：</string>
    <string name="exit">退出</string>
    <string name="question_analysis">试题解析</string>
    <string name="errors">错题数：</string>
    <string name="download">下载</string>
    <string name="if_download">是否下载？</string>
    <string name="downloading">正在下载...</string>
    <string name="complete">下载完成</string>
    <string name="failed">失败</string>
    <string name="invalid_download_address">无效的下载地址</string>
    <string name="tip">提示</string>
    <string name="save">保存</string>
    <string name="new_pwd">新密码：</string>
    <string name="confirm">确认：</string>
    <string name="create">创建</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="minute">分钟</string>
    <string name="wait">待考</string>
    <string name="miss">缺考</string>
    <string name="if_exam">是否开始考试？</string>
    <string name="expired">考试已过期</string>
    <string name="not_started">考试未开始</string>
    <string name="back">返回</string>
    <string name="password_empty">两次密码输入的不一致</string>
    <string name="nothing">无</string>
    <string name="course_ware_nothing">课件不存在，是否下载?</string>
    <string name="send">发送</string>
    <string name="Sort">种类：</string>

    <!-- Strings related to toast -->
    <string name="toast_upgrade_t1">请在软件更新完成之后继续使用。</string>
    <string name="toast_upgrade_t2">您必须安装新版本之后才能使用。</string>

    <!-- Strings related to common -->
    <string name="no_item">暂无数据</string>

    <string name="post_delete_tv_d">拖动到此处删除</string>
    <string name="post_delete_tv_s">松手即可删除</string>
    <string name="company">公司</string>
    <string name="telephone">电话</string>
    <string name="course_language">课程语言</string>
    <string name="face_info">人脸信息</string>
    <string name="face_has_record">已录入</string>
    <string name="face_no_record">未录入</string>
    <string name="etp_home">课程市场</string>
    <string name="etp_bbs">论坛</string>
    <string name="downloaded">已下载：</string>
    <string name="cancel">取消下载</string>
</resources>
