<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_dialog_cancel"
            android:textColor="@color/text_color_black"
            />
        <TextView
            android:id="@+id/tv_send"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/text_color_gray_light"
            android:enabled="false"
            android:clickable="false"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_reply"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@null"
        android:hint="@string/content"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="top"
        />

</LinearLayout>