<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@android:color/white" />

    <RelativeLayout
        android:id="@+id/rl_header"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:background="@mipmap/toolbar_background"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="50dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_16"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_20"
            android:text="@string/avatar"
            />
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="65dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_16"
            android:text="@string/save"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/owner_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="40dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            />
        <TextView
            android:id="@+id/choose_photo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_corner_button_selector"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/select_a_photo_from_album"
            android:textColor="@color/default_text_black_color"
            />
        <TextView
            android:id="@+id/take_photo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_corner_button_selector"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/take_a_photo"
            android:textColor="@color/default_text_black_color"
            />
    </LinearLayout>

</RelativeLayout>