<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@android:color/white" />
    <RelativeLayout
        android:id="@+id/rl_header"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:background="@mipmap/toolbar_background"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="50dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_16"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_20"
            android:text="@string/create"
            />
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:gravity="center_vertical"
            android:paddingRight="19dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_color_gray_light"
            android:textSize="@dimen/title_text_size_16"
            android:text="@string/issue"
            android:enabled="false"
            android:clickable="false"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        >

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/circle_corner_button_selector"
            android:padding="5dp"
            android:hint="@string/type"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/default_text_black_color"
            android:textSize="12dp"
            android:gravity="center_vertical"
            />
        <EditText
            android:id="@+id/et_title"
            android:layout_below="@id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_corner_button_selector"
            android:hint="@string/title"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/default_text_black_color"
            android:textSize="12dp"
            android:maxLength="20"
            android:padding="5dp"
            />
        <EditText
            android:layout_below="@id/et_title"
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/circle_corner_button_selector"
            android:hint="@string/content"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/default_text_black_color"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:textSize="12dp"
            android:maxLength="500"
            android:padding="5dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rlv"
            android:layout_below="@id/et_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scrollbars="none"
            android:clipToPadding="false"
            >
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:max="100"
        />
    <LinearLayout
        android:id="@+id/delete_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/article_post_delete"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_light"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/iv_trash"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/ic_trash"
            />
        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="@string/post_delete_tv_d"
            android:textColor="@android:color/white"
            android:textSize="11dp"
            android:padding="5dp"
            />
    </LinearLayout>
</RelativeLayout>