<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="@android:color/white"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@android:color/white" />

    <RelativeLayout
        android:id="@+id/rl_header"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:background="@mipmap/toolbar_background"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="50dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_16"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_20"
            android:text="@string/login_password"
            />
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="65dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/title_text_size_16"
            android:text="@string/save"
            android:clickable="false"
            android:enabled="false"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_below="@id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:alpha="0.5"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:gravity="center|right"
            android:textColor="@android:color/white"
            android:text="@string/new_pwd"
            />
        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="85dp"
            android:textSize="15dp"
            android:padding="10dp"
            android:background="@null"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="20"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:alpha="0.5"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:gravity="center|right"
            android:textColor="@android:color/white"
            android:text="@string/confirm"
            />
        <EditText
            android:id="@+id/et_sure_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="85dp"
            android:textSize="15dp"
            android:padding="10dp"
            android:background="@null"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="20"
            />
    </RelativeLayout>
</RelativeLayout>