<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_login" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.05"
        android:background="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_zx_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/platform_name"
                    android:textColor="@android:color/white"
                    android:textSize="22dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="50dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#30FFFFFF" />

                <EditText
                    android:id="@+id/et_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/register_login_name"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/et_real_name"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#AAFFFFFF"
                    android:textSize="15sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#30FFFFFF" />

                <EditText
                    android:id="@+id/et_real_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/register_real_name"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/et_nickname"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#AAFFFFFF"
                    android:textSize="15sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#30FFFFFF" />

                <EditText
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/company"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/register_login_pwd"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#AAFFFFFF"
                    android:textSize="15sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#30FFFFFF" />

                <EditText
                    android:id="@+id/et_tel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/telephone"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/register_login_pwd"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#AAFFFFFF"
                    android:textSize="15sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#30FFFFFF" />

                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/register_login_pwd"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#AAFFFFFF"
                    android:textSize="15sp" />
            </RelativeLayout>
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/big_button_selector"
                android:text="@string/register_text"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:enabled="false"
                android:clickable="false"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@null"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>