<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:scaleType="fitXY"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@android:color/white" />
    <RelativeLayout
        android:id="@+id/course_head"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:background="@mipmap/toolbar_background"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="50dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_16"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size_20"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/item_head"
        android:layout_below="@id/course_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avatar"
            android:textColor="@color/default_text_black_color"
            android:layout_centerVertical="true"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:id="@+id/owner_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/item_head"
        android:background="@android:color/darker_gray"
        />
    <RelativeLayout
        android:id="@+id/item_username"
        android:layout_below="@id/item_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_nickname"
            android:textColor="@color/default_text_black_color"
            android:layout_centerVertical="true"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="15dp"
            android:textColor="@android:color/darker_gray"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/item_username"
        android:background="@android:color/darker_gray"
        />
    <RelativeLayout
        android:id="@+id/item_pwd"
        android:layout_below="@id/item_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@color/default_text_black_color"
            android:layout_centerVertical="true"
            android:textSize="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="******"
            android:textSize="15dp"
            android:textColor="@android:color/darker_gray"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/item_username"
        android:background="@android:color/darker_gray"
        />
    <RelativeLayout
        android:id="@+id/item_language"
        android:layout_below="@id/item_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_language"
            android:textColor="@color/default_text_black_color"
            android:layout_centerVertical="true"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="中文"
            android:textSize="15dp"
            android:textColor="@android:color/darker_gray"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/item_face"
        android:layout_below="@id/item_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_info"
            android:textColor="@color/default_text_black_color"
            android:layout_centerVertical="true"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tv_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="未录入"
            android:textSize="15dp"
            android:textColor="@android:color/darker_gray"
            />
    </RelativeLayout>
</RelativeLayout>